--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,6 @@ body {
 
 p {
     margin: 0px auto;
-    /*text-shadow: -2px 2px 0px black;*/
 }
 
 input {
@@ -13,15 +12,10 @@ input {
     text-align: center;
 }
 
-
-table {
-    margin: auto;
-}
-
 td,
 th {
     border: 2px solid white;
-    padding: 10px 0px;
+    padding: 15px 0px;
     text-align: center;
     font-family: sans-serif;
     background: transparent;
@@ -30,7 +24,9 @@ th {
 table {
     border-collapse: collapse;
     width: 90%;
-    height: 530px;
+    margin: auto;
+    height: auto;
+    display: none;
 }
 
 input {
@@ -41,8 +37,48 @@ input {
     width: 30%;
 }
 
-img{
-    margin : 50px ;
-    width: 600px ;
-    height:600px;
+img {
+    margin: 50px;
+    /*width: 600px;
+    height: 600px;*/
+}
+
+#Title,
+img {
+    display: none;
+}
+
+#welcome{
+    margin: 5rem;
+    font-size: 3rem;
+}
+
+#back {
+    position: fixed;
+    left: 20px;
+    display: none;
+}
+
+#buttons {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -70%);
+    display: flex;
+    flex-direction: column;
+}
+
+button:hover{
+    cursor: pointer;
+}
+
+#buttons button {
+    padding: 10px;
+    margin: 10px;   
+}
+
+#download{
+    position: absolute;
+    bottom: 10%;
+    right: 8%;
 }
